--- a/README.adoc
+++ b/README.adoc
@@ -81,23 +81,27 @@ This includes everything affected by the https://www.jenkins.io/doc/upgrade-guid
 In addition to that, the following functionality is expected to break when this plugin is installed:
 
 |====
-| Plugin | Affected Feature | Fix or Workaround
+| Plugin | Affected Feature | Workaround | Fix
 
 | https://plugins.jenkins.io/cobertura/[Cobertura]
 | "Publish Cobertura Coverage Report" post-build step fails
 | n/a
+| n/a
 
 | https://plugins.jenkins.io/code-coverage-api/[Code Coverage API]
 | Saving of source files (optional feature) in post-build step fails
-| Disable feature
+| Do not use the feature
+| n/a
 
 | https://plugins.jenkins.io/log-parser/[Log Parser]
 | Log parsing fails
+| n/a
 | n/a
 
 | https://plugins.jenkins.io/maven-plugin/[Maven Integration]
 | Archiving Maven sites and Javadoc fails
 | Do not archive Maven sites or Javadoc
+| Update Maven Plugin to 3.15.1 or install one of the backports 3.12.1, 3.10.1, 3.8.1, 3.7.1, 3.6.1
 
 |====
 
