--- a/README.adoc
+++ b/README.adoc
@@ -18,6 +18,7 @@ This plugin provides the following protections for code sent by agents to the co
    The default block list includes:
    * https://www.jenkins.io/security/advisory/2021-11-04/#SECURITY-2455[SECURITY-2455] (rejecting `FileCallableWrapper`, prohibiting all `FileCallable` implementations)
    * https://www.jenkins.io/security/advisory/2021-11-04/#SECURITY-2506[SECURITY-2506] (a callable in https://plugins.jenkins.io/subversion/[Subversion Plugin])
+   * https://www.jenkins.io/security/advisory/2021-11-12/#SECURITY-2525[SECURITY-2525] (a callable in Squash TM Publisher (Squash4Jenkins) Plugin)
 
 == Getting started
 
