--- a/README.adoc
+++ b/README.adoc
@@ -103,6 +103,26 @@ In addition to that, the following functionality is expected to break when this 
 | Do not archive Maven sites or Javadoc
 | Update Maven Plugin to 3.15.1 or install one of the backports 3.12.1, 3.10.1, 3.8.1, 3.7.1, 3.6.1
 
+| https://plugins.jenkins.io/hp-application-automation-tools-plugin/[Micro Focus Application Automation Tools]
+| TBD
+| TBD
+| n/a (https://issues.jenkins.io/browse/JENKINS-67232[JENKINS-67232])
+
+| https://plugins.jenkins.io/publish-over-ssh/[Publish Over SSH]
+| TBD
+| TBD
+| n/a (https://issues.jenkins.io/browse/JENKINS-67236[JENKINS-67236])
+
+| https://plugins.jenkins.io/selenium/[Selenium]
+| TBD
+| TBD
+| n/a (https://issues.jenkins.io/browse/JENKINS-67255[JENKINS-67255])
+
+| https://plugins.jenkins.io/violations/[Violations]
+| TBD
+| TBD
+| n/a (https://issues.jenkins.io/browse/JENKINS-67254[JENKINS-67254])
+
 |====
 
 == LICENSE
